# amul

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  AMULCom.C  AMULEd.C  AMULEd.H  AMULEd.pw  AMULmc.I  AMan.C  AWho.C  BUILDING.md  CMakeLists.txt  COMPILING.md  Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu  Extras.I  Makefile  NEXT.md  README.md  TODO.txt  aman.c  amul.c  amul2.c  amul3.c  amul4.c  amulcom.c  amuled.c  amuled.h  awho.c  extras.c  extras.i
archive/smugl-later/: .clang-tidy  .gitignore  CMakeLists.txt  HISTORY  README-Amul  README-Project  TODO  configure  make-revision.py  project.rev
archive/smugl-later/apis/: Logging.hpp
archive/smugl-later/html/: concepts.html  mobiles.html  objects.html  rooms.html  system.html
archive/smugl-later/include/: PlatformChecks.cmake  actuals.hpp  amul.hpp  cl_basicobj.hpp  cl_mappedfile.hpp  cl_object.hpp  cl_player.hpp  cl_room.hpp  cl_vocab.hpp  config.h.in  consts.hpp  defines.hpp  fderror.hpp  fileerror.hpp  fileio.hpp  fperror.hpp  includes.hpp  libprotos.hpp  portable.hpp  structs.hpp  syslog.hpp  typedefs.hpp  variables.hpp  vocab.hpp
archive/smugl-later/lib/: actions.cpp  classes.cpp  conditions.cpp  data.cpp  mappedfile.cpp  misc.cpp  syslog.cpp  testbed.cpp  vocab.cpp
archive/smugl-later/smugl/: aliases.cpp  aliases.hpp  basicobjs.cpp  basicobjs.hpp  client.cpp  client.hpp  data.hpp  io.cpp  io.hpp  ipc.cpp  ipc.hpp  lang.cpp  lang.hpp  langtable.cpp  langtable.hpp  loaders.cpp  loaders.hpp  login.cpp  login.hpp  manager.cpp  manager.hpp  misc.cpp  misc.hpp  mobiles.cpp  mobiles.hpp  objects.cpp  objects.hpp  parser.cpp  parser.hpp  players.cpp  players.hpp  ranks.cpp  ranks.hpp  rooms.cpp  rooms.hpp  smugl.cpp  smugl.hpp  textproc.cpp  textproc.hpp  travel.cpp  (+2 more)
archive/smugl-later/smuglcom/: basicobjs.cpp  cleanup.cpp  errors.cpp  errors.hpp  filebits.cpp  langproc.cpp  misc.cpp  mobproc.cpp  msgmgt.cpp  obdsproc.cpp  objproc.cpp  protos.hpp  roomproc.cpp  smsgproc.cpp  smuglcom.cpp  smuglcom.hpp  synsproc.cpp  titleproc.cpp  travfunc.cpp  travproc.cpp  umsgproc.cpp  verify.cpp  version.cpp  virtuals.hpp  vocab.cpp
archive/smugl-later/test/: language.smg
archive/smugl-src/: .clang-format  .clang-tidy  .cvsignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README-Database  README.md  bootstrap.sh  config.cache  config.status  configure  configure.ac  develconfigure  develconfigure.sh  index.html
archive/smugl-src/CVS/: Entries  Repository
archive/smugl-src/h/: Makefile.in  SMUGL.h  SMUGL.rev  SMUGLCOM.h  SMUGLCOM.rev  actuals.hpp  amul.hpp  cl_basicobj.hpp  cl_object.hpp  cl_player.hpp  cl_room.hpp  cl_vocab.hpp  config.h  config.h.in  consts.hpp  container.hpp  defines.hpp  fileio.hpp  includes.hpp  libprotos.hpp  portable.hpp  structs.hpp  typedefs.hpp  variables.hpp  vocab.hpp
archive/smugl-src/html/: index.html  lang.html  msgs.html  ranks.html  template
archive/smugl-src/include/: Makefile.in  SMUGL.h  SMUGLCOM.h  SMUGLCOM.rev  actuals.hpp  amul.hpp  cl_basicobj.hpp  cl_object.hpp  cl_player.hpp  cl_room.hpp  config.h.in  consts.hpp  defines.hpp  fileio.hpp  includes.hpp  libprotos.hpp  portable.hpp  structs.hpp  typedefs.hpp  variables.hpp  vocab.hpp
archive/smugl-src/lib/: .cvsignore  Makefile.dep  Makefile.in  actions.cc  actions.cpp  classes.cc  classes.cpp  conditions.cc  data.cc  data.cpp  misc.cc  misc.cpp  vocab.cc  vocab.cpp
archive/smugl-src/smugl/: .cvsignore  Makefile.dep  Makefile.in  README  aliases.cc  aliases.cpp  aliases.hpp  basicobjs.cc  basicobjs.cpp  basicobjs.hpp  bobidx.hpp  client.cc  client.cpp  client.hpp  data.hpp  io.cc  io.cpp  io.hpp  ipc.cc  (+50 more)
compiler/: CMakeLists.txt  amulcom.cpp  amulcom.h  amulcom.includes.h  amulcominc.h  constants.cpp  constants.h  context.cpp  context.h  extras.cpp  extras.h  file_handling.cpp  file_handling.h  filebits.cpp  lang_proc.cpp  main.cpp  mob_proc.cpp  rank_proc.cpp  syns_proc.cpp  trav_proc.cpp  travel_functions.cpp  travel_functions.h  variables.h
compiler/parsers/: language.cpp  mobile.cpp  object.cpp  object_description.cpp  parsers.h  rank.cpp  room.cpp  synonyms.cpp  system_message.cpp  title.cpp  travel.cpp  user_message.cpp
compiler/tests/: test_extras.cpp
lib/: CMakeLists.txt  amigastubs.cpp  constants.cpp  logging.c  logging.cpp  os.cpp  variables.cpp
src/: CMakeLists.txt  CPPCheck.cmake  ClangTidy.cmake  Ctags.cmake  PlatformChecks.cmake  Sanitizers.cmake  aman.c  aman.cpp  amigastubs.h  amul.actions.cpp  amul.actions.h  amul.acts.h  amul.algorithms.h  amul.argp.h  amul.c  amul.client.cpp  amul.cmdline.cpp  amul.cons.h  amul.console.cpp  amul.cpp  amul.defs.h  amul.demonactions.cpp  amul.demonactions.h  amul.file.h  amul.h  amul.list.h  amul.main.cpp  amul.members.cpp  amul.msgs.h  amul.server.cpp  amul.stct.h  amul.stringmanip.cpp  amul.stringmanip.h  amul.strs.h  amul.test.h  amul.typedefs.h  amul.vars.h  amul.vmop.h  amul.wholeoriginal.cpp  amul.xtra.h  (+124 more)
src/h/: AMUL.i  AMULCOM.i  aman.version.h  amigastubs.h  amul.acts.h  amul.argp.h  amul.cons.h  amul.defs.h  amul.enum.h  amul.file.h  amul.gcfg.h  amul.h  amul.msgs.h  amul.scrn.h  amul.stct.h  amul.strs.h  amul.test.h  amul.type.h  amul.vars.h  amul.version.h  amul.vmop.h  amul.xtra.h  amulcom.fileprocessing.h  amulcom.h  amulcom.strings.h  amulcom.version.h  amulconfig.h.in  amulinc.h  array.h  atom.h  buffer.h  char-to-atom.h  demon.h  demon.inl.h  filemapping.h  filesystem.h  filesystem.inl.h  logging.h  modules.h  msgports.h  (+8 more)
tests/: CMakeLists.txt  README.md  buffer_test.c  buffer_tests.c  buffer_tests.cpp  filesystem_test.c  filesystem_tests.c  filesystem_tests.cpp  gtest_aliases.h  hashmap_test.c  hashmap_tests.cpp  module_tests.c  module_tests.cpp  modules_test.c  test_atom.cpp  test_buffer.cpp  test_filemapping.cpp  test_filesystem.cpp  test_hashmap.cpp  test_module.cpp  test_msgport.cpp  test_spinlock.cpp  testing.h  testmain.c  testmain.cpp  tokenizer_tests.c  tokenizer_tests.cpp
tests/compiler/: CMakeLists.txt  test_extras.cpp
tests/files/: mapping_test_file1.txt
(+507 files in other folders)
